deploy: 2f4702744dc46c95a579153b4548e2144edb8426

--- a/examples/sdf-sprites.css
+++ b/examples/sdf-sprites.css
@@ -349,5 +349,9 @@
   cursor: move;
 }
 
+.ol-overviewmap .ol-viewport:hover {
+  cursor: pointer;
+}
+
 
 /*# sourceMappingURL=sdf-sprites.css.map*/
