--- a/examples/terrarium-hillshading.css
+++ b/examples/terrarium-hillshading.css
@@ -349,5 +349,9 @@
   cursor: move;
 }
 
+.ol-overviewmap .ol-viewport:hover {
+  cursor: pointer;
+}
+
 
 /*# sourceMappingURL=terrarium-hillshading.css.map*/
