--- a/examples/tilejson-vectortile.css
+++ b/examples/tilejson-vectortile.css
@@ -349,5 +349,9 @@
   cursor: move;
 }
 
+.ol-overviewmap .ol-viewport:hover {
+  cursor: pointer;
+}
+
 
 /*# sourceMappingURL=tilejson-vectortile.css.map*/
